# artemis-cmmae

./: .gitignore  LICENSE  README.md  pyproject.toml
artemis_cmmae/: __init__.py  core.py  features.py  loaders.py  model.py  pipeline.py  plotting.py  utils.py
artemis_cmmae/weights/mmae/: config.json  model_best.pt  norm_stats.json
artemis_cmmae/weights/som_alpha1/: metadata.json  model.joblib  node_labels.npy  params.json  preprocessors.json  preprocessors.pkl  weights.npy
artemis_cmmae/weights/som_alpha10/: metadata.json  model.joblib  node_labels.npy  params.json  weights.npy
artemis_cmmae/weights/som_alpha5/: metadata.json  model.joblib  node_labels.npy  params.json  weights.npy
examples/: quickstart.py
notebooks/: classification_showcase.ipynb
