[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "artemis-cmmae"
version = "0.1.0"
description = "ARTEMIS plasma region classifier using Contrastive Multi-Modal Autoencoder and Self-Organizing Maps"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "James Edmond"},
]
keywords = ["space-physics", "plasma", "ARTEMIS", "machine-learning", "classification"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "torch>=2.0",
    "joblib>=1.3",
    "scikit-learn>=1.5,<2",
    "xpysom>=1.0.7",
    "pyspedas>=1.7",
    "cdflib>=1.0",
    "xarray>=2023.1",
    "matplotlib>=3.5",
]

[project.urls]
Repository = "https://github.com/jae1018/artemis-cmmae"

[tool.setuptools.packages.find]
include = ["artemis_cmmae*"]

[tool.setuptools.package-data]
artemis_cmmae = [
    "weights/**/*",
    "sample_data/*.csv",
]
